# programmiersprachen-aufgabe-1

./: .~lock.Aufgabenblatt_1_Loesungen.odt#  .~lock.loesungen_aufgabenblatt_1.odt#  Aufgabenblatt_1_Loesungen.odt  CMakeLists.txt  README.md  aufgaben-1  loesungen_aufgabenblatt_1.odt
source/: CMakeLists.txt  aufgabe1.8.cpp  helloworld  helloworld.cpp  mileToKilometer.cpp  tests.cpp
