add_executable(helloworld helloworld.cpp)

#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)

add_executable(aufgabe1.8 aufgabe1.8.cpp)

# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
